seebeck/gpib488.h


//
// Address type (for 488.2 calls)
//
typedef short Addr4882_t;  // System dependent: must be 16 bits

void TestSys        (int boardID, const Addr4882_t * addrlist, short * results);

void Trigger        (int boardID, Addr4882_t addr);

void TriggerList    (int boardID, const Addr4882_t * addrlist);

void WaitSRQ        (int boardID, short * result);