GPIB-488/Language Interfaces/C#/Backup/Gpib488.cs


		[DllImport(_GpibDll, EntryPoint="TestSys")]
		private static extern void _TestSys(int board, short[] addrlist, short[] results);
		public static void TestSys(int board, short[] addrlist, short[] results)
		{
			_TestSys(board, addrlist, results);
		}

		[DllImport(_GpibDll, EntryPoint="Trigger")]
		private static extern void _Trigger(int board, short address);
		public static void Trigger(int board, short address)
		{
			_Trigger(board, address);
		}

		[DllImport(_GpibDll, EntryPoint="TriggerList")]
		private static extern void _TriggerList(int board, short[] addrlist);
		public static void TriggerList(int board, short[] addrlist)
		{
			_TriggerList(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="WaitSRQ")]
		private static extern void _WaitSRQ(int board, out short result);
		public static void WaitSRQ(int board, out short result)
		{
			_WaitSRQ(board, out result);
		}
	}
}
